Simplify core types: volatile state, no carrier records, ticker-only PolicyStore (#5)
* Simplify core types per review: replace AtomicReference with a volatile AclState field and derive the digest skip from the published Valid state removing lastDigest, drop the unused loadedAt and detectedAt timestamps and with them the Clock from PolicyStore leaving only the monotonic ticker, return plain canonical paths from LocalResourceParser instead of the LocalResource carrier whose rawEntry was never read, replace the PolicedKey record with a Map of normalized key to a top-level Cardinality enum, and apply small Java cleanups: strip over trim, equalsIgnoreCase for the URI scheme, Map.of over Collections.emptyMap, catching RuntimeException directly in the advisor constructor, and a compact LinkedHashSet construction in HadoopGroupResolver

* Restore ASCII-only trim for submitted resource values: Spark trims at most ASCII whitespace, so validating a Unicode-stripped variant could authorize a different file than Spark resolves; Unicode-whitespace-suffixed values are now rejected as malformed URIs, with a regression test using a filename ending in U+2003

* Validate resource entries byte-for-byte as Spark resolves them: only trailing ASCII whitespace of the complete value is dropped, mirroring Kyuubi's trim of the assembled conf argument, while per-entry trimming is removed so leading whitespace and whitespace before a comma are rejected as malformed URIs instead of authorizing a trimmed sibling of the path Spark actually opens

* Construct the exact-rule pattern Path once in compilePattern instead of twice

* Drop redundant path.isEmpty() check subsumed by the startsWith slash test

* Use imports instead of inline fully qualified class names across main and test sources